welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:2: error: value len is not a member of Array[Int]
  var L = nums.len
               ^indexOfValue:3: error: not found: value len
  for (i <- 0 to len-1){
                 ^